<resources>
    <string name="app_name">CarFlowingProject</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dashboard_acitvity">DashboardAcitvity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_HomeBot">Home</string>
    <string name="title_Activity">Activity</string>
    <string name="title_Cars">Cars</string>
    <string name="title_Alarm">Alarm</string>
    <string name="title_User">User</string>
    <string name="title_activityGPS">Map</string>
</resources>
